--- a/hw12-Web-Server/src/main/resources/staticResources/index.html
+++ b/hw12-Web-Server/src/main/resources/staticResources/index.html
@@ -5,6 +5,12 @@
     <title>Index Page</title>
 </head>
 <body>
-<h1>Welcome Page</h1>
+    <h1>Welcome Page</h1>
+    <p>Переход на страницу "PublicInfo" </p>
+    <!--В качестве action должен выступать обработчик-->
+    <form action="index.html">
+        <!--Переходим по кнопке на другую страницу PublicInfo из начальной страницы-->
+        <button formaction="http://localhost:8080/publicInfo" type="submit">Submit</button>
+    </form>
 </body>
 </html>
