--- a/hw12-Web-Server/src/main/resources/listOfUsers.html
+++ b/hw12-Web-Server/src/main/resources/listOfUsers.html
@@ -2,21 +2,40 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Информация о пользователях</title>
+    <style>
+        table {
+            width: 50%; /* Ширина таблицы */
+            background: white; /* Цвет фона таблицы */
+            color: white; /* Цвет текста */
+            border-spacing: 1px; /* Расстояние между ячейками */
+        }
+        th {
+            background: maroon; /* Цвет фона ячеек */
+            padding: 5px; /* Поля вокруг текста */
+        }
+        td {
+            background: grey; /* Цвет фона ячеек */
+            padding: 5px; /* Поля вокруг текста */
+        }
+    </style>
 </head>
 <body>
       <table>
             <tr>
-              <th>Name</th>
-              <th>Age</th>
+                <th>Name</th>
+                <th>Age</th>
+                <th>PhoneNumber</th>
+                <th>Address</th>
+                <th>Update/Delete</th>
             </tr>
-
-          <#list users as user>
             <tr>
-              <td>${user.name}</td>
-              <td>${user.age}</td>
+                <td>Ячейка 1</td>
+                <td>Ячейка 2</td>
+                <td>Ячейка 3</td>
+                <td>Ячейка 4</td>
+                <td>Ячейка 5</td>
             </tr>
-          </#list>
       </table>
 </body>
 </html>
