--- a/hw12-Web-Server/src/main/resources/publicInfo.html
+++ b/hw12-Web-Server/src/main/resources/publicInfo.html
@@ -3,12 +3,31 @@
 <head>
     <meta charset="UTF-8">
     <title>Public Info</title>
+    <style type="text/css">
+        h1 {
+            text-align: center;
+            font-size: 300%;
+            color: cornflowerblue;
+        }
+        h2 {
+            text-align: center;
+            text-decoration:underline;
+            font-size:200%;
+        }
+        h3 {
+            text-align: center;
+            text-decoration:underline;
+            font-size:200%;
+        }
+    </style>
 </head>
 <body>
+    <h1>PublicInfo Page</h1>
+
     <!--Ссылка на добавление нового пользователя и переход на страницу "userSave"-->
-    <p><a href="http://localhost:8080/userSave">Добавить нового пользователя</a></p>
+    <h2><a href="http://localhost:8080/userSave">Добавить нового пользователя</a></h2>
 
     <!--Ссылка на таблицу со всеми пользователями и переход на страницу "UsersInfo"-->
-    <p><a href="http://localhost:8080/usersInfo">Список всех пользователей</a></p>
+    <h3><a href="http://localhost:8080/usersInfo">Список всех пользователей</a></h3>
 </body>
 </html>
