--- a/hw12-Web-Server/src/main/resources/UsersInfo.html
+++ b/hw12-Web-Server/src/main/resources/UsersInfo.html
@@ -50,10 +50,10 @@
                 <th>Address</th>
             </tr>
             <tr>
-                <td>Ячейка 1</td>
-                <td>Ячейка 2</td>
-                <td>Ячейка 3</td>
-                <td>Ячейка 4</td>>
+                <td>${name}</td>
+                <td>${age}</td>
+                <td>${phone}</td>
+                <td>${address}</td>>
             </tr>
       </table>
       <table class="table2">
