--- a/hw12-Web-Server/src/main/resources/UsersInfo.html
+++ b/hw12-Web-Server/src/main/resources/UsersInfo.html
@@ -59,10 +59,10 @@
       <table class="table2">
             <tr>
                 <td>
-                    <button type="submit">Update</button>
+                    <button value="update" name="buttonValue" type="submit">Update</button>
                 </td>
                 <td>
-                    <button type="submit">Delete</button>
+                    <button value="delete" name="buttonValue" type="submit">Delete</button>
                 </td>
             </tr>
       </table>
