--- a/hw12-Web-Server/src/main/resources/UsersInfo.html
+++ b/hw12-Web-Server/src/main/resources/UsersInfo.html
@@ -66,5 +66,14 @@
                 </td>
             </tr>
       </table>
+
+      <form>
+          <ul>
+              <#list list as User>
+                    <li>${User.name}</li>
+              </#list>
+          </ul>
+      </form>
+
 </body>
 </html>
