--- a/hw12-Web-Server/src/main/resources/addUser.html
+++ b/hw12-Web-Server/src/main/resources/addUser.html
@@ -57,7 +57,7 @@
 
     <form>
         <!--Кнопка для перехода на другую страницу "UsersInfo" со списком всех пользователей-->
-        <button formaction="http://localhost:8080/usersInfo" value="listOfUsers" name="buttonValue" type="submit">List of Users</button>
+        <button formaction="http://localhost:8080/usersInfo" type="submit">List of Users</button>
     </form>
 </body>
 </html>
