--- a/hw12-Web-Server/src/main/resources/infoForUpdating.html
+++ b/hw12-Web-Server/src/main/resources/infoForUpdating.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>UserUpdate</title>
     <style type="text/css">
         h1 {
             text-align: center;
@@ -25,7 +25,7 @@
     </style>
 </head>
 <body>
-    <form method="post">
+    <form method="get">
         <label for="name">Name:</label>
         <input id="name" type="text" name="name">
         <br>
@@ -48,7 +48,12 @@
         <!--Такой вариант с переходом на другую страницу. Данные будут отправлены на другой сервлет-->
         <!--параметр formaction="http://localhost:8080/usersInfo" в button может напрямую перевести на нужную страницу-->
         <!--при нажатии и передать все параметры-->
-        <button formaction="http://localhost:8080/usersInfo" value="userUpdate" name="buttonValue" type="submit">Update</button>
+        <button formaction="http://localhost:8080/userUpdate" value="userUpdate" name="buttonValue" type="submit">Update</button>
+    </form>
+
+    <form>
+        <!--Кнопка для перехода на другую страницу "UsersInfo" со списком всех пользователей-->
+        <button formaction="http://localhost:8080/usersInfo" type="submit">List of Users</button>
     </form>
 </body>
 </html>
