--- a/hw12-Web-Server/src/main/resources/publicInfo.html
+++ b/hw12-Web-Server/src/main/resources/publicInfo.html
@@ -22,7 +22,7 @@
     </style>
 </head>
 <body>
-    <h1>PublicInfo Page</h1>
+    <h1>Some public information...</h1>
 
     <!--Ссылка на добавление нового пользователя и переход на страницу "userSave"-->
     <h2><a href="http://localhost:8080/userSave">Добавить нового пользователя</a></h2>
