--- a/hw12-Web-Server/src/main/resources/infoForUpdating.html
+++ b/hw12-Web-Server/src/main/resources/infoForUpdating.html
@@ -25,7 +25,7 @@
     </style>
 </head>
 <body>
-    <form method="get">
+    <form method="post">
         <label for="name">Name:</label>
         <input id="name" type="text" name="name">
         <br>
