--- a/hw12-Web-Server/src/main/resources/staticResources/index.html
+++ b/hw12-Web-Server/src/main/resources/staticResources/index.html
@@ -41,7 +41,7 @@
 </head>
 <body>
     <h1>Welcome Page</h1>
-    <h2>Переходи на страницу "PublicInfo"</h2>
+    <h2>Переход на страницу "PublicInfo"</h2>
 
     <!--В качестве action должен выступать обработчик-->
     <form action="index.html">
