--- a/hw12-Web-Server/src/main/resources/infoForUpdating.html
+++ b/hw12-Web-Server/src/main/resources/infoForUpdating.html
@@ -26,6 +26,10 @@
 </head>
 <body>
     <form method="post">
+        <label for="idToUpdate">Id:</label>
+        <input id="idToUpdate" type="text" name="id">
+        <br>
+
         <label for="name">Name:</label>
         <input id="name" type="text" name="name">
         <br>
